CMSC-907 - Clean up code: convert to better methods; fix naming convention violations; remove extra imports.
git-svn-id: https://scm.mmbase.org/mmbase/trunk@33410 91430c5f-d668-0410-9e7d-dd663366dcfd